--- a/www/index.html
+++ b/www/index.html
@@ -105,7 +105,18 @@
 	float: left;
 	margin: auto;
 	padding: 5px;
-	width: 80%
+	width: 80%;
+	overflow: none;
+	font-variant: small-caps;
+	font-size: large;
+}
+
+    .annotation {
+	background: white;
+	padding: 5px;
+	width: 80%;
+	font-size: x-small;
+	overflow: none;
 }
 
     .icon {
@@ -113,7 +124,8 @@
 	float: right;
 	margin: auto;
 	padding: 5px;
-	width: 10%
+	width: 10%;
+	overflow: none;
 }
 
 
@@ -131,103 +143,194 @@
 	<h1>Skróty</h1>
 	<div class="container">
 		<div class="label">
-			przykladowy tekst
+			Parter
 		</div>
 		<div class="icon">
 			ikona
+		</div>
+		<div class="annotation">
+			Wszystkie rolety na dole.
 		</div>
 	</div>
 	<div class="container">
 		<div class="label">
-			przykladowy tekst
+			Piętro
 		</div>
 		<div class="icon">
 			ikona
+		</div>
+		<div class="annotation">
+			Wszystkie rolety na piętrze.
 		</div>
 	</div>
 	<div class="container">
 		<div class="label">
-			przykladowy tekst
+			Dzienne
 		</div>
 		<div class="icon">
 			ikona
+		</div>
+		<div class="annotation">
+			Salon + jadalnia
 		</div>
 	</div>
 	<div class="container">
 		<div class="label">
-			przykladowy tekst
+			Kuchnia
 		</div>
 		<div class="icon">
 			ikona
+		</div>
+		<div class="annotation">
+			Kuchnia
 		</div>
 	</div>
       </li>
       <li class="middle dragend-page">
-        <h1>Druga</h1>
+        <h1>Parter</h1>
 	<div class="container">
 		<div class="label">
-			przykladowy tekst
+			Kuchnia 1
 		</div>
 		<div class="icon">
 			ikona
+		</div>
+		<div class="annotation">
+			Długie okno.
 		</div>
 	</div>
 	<div class="container">
 		<div class="label">
-			przykladowy tekst
+			Kuchnia 2
 		</div>
 		<div class="icon">
 			ikona
+		</div>
+		<div class="annotation">
+			Narożne.
 		</div>
 	</div>
 	<div class="container">
 		<div class="label">
-			przykladowy tekst
+			Jadalnia
 		</div>
 		<div class="icon">
 			ikona
+		</div>
+		<div class="annotation">
+			Wyjście na taras z jadalni.
 		</div>
 	</div>
 	<div class="container">
 		<div class="label">
-			przykladowy tekst
+			Salon 1
 		</div>
 		<div class="icon">
 			ikona
+		</div>
+		<div class="annotation">
+			Witryna w salonie.
+		</div>
+	</div>
+	<div class="container">
+		<div class="label">
+			Salon 2
+		</div>
+		<div class="icon">
+			ikona
+		</div>
+		<div class="annotation">
+			Wyjście na ogród.
+		</div>
+	</div>
+	<div class="container">
+		<div class="label">
+			Gabinet
+		</div>
+		<div class="icon">
+			ikona
+		</div>
+		<div class="annotation">
+			Jaki prezes taki gabinet.
+		</div>
+	</div>
+	<div class="container">
+		<div class="label">
+			Schowanko
+		</div>
+		<div class="icon">
+			ikona
+		</div>
+		<div class="annotation">
+			Zakaz wstępu!
+		</div>
+	</div>
+	<div class="container">
+		<div class="label">
+			Kotłownia
+		</div>
+		<div class="icon">
+			ikona
+		</div>
+		<div class="annotation">
+			Zimą tu najcieplej.
 		</div>
 	</div>
       <li class="last dragend-page">
-        <h1>Trzecia</h1>
+        <h1>Pietro</h1>
 	<div class="container">
 		<div class="label">
-			przykladowy tekst
+			Łazienka
 		</div>
 		<div class="icon">
 			ikona
+		</div>
+		<div class="annotation">
+			Łazienka, ta na górze.
 		</div>
 	</div>
 	<div class="container">
 		<div class="label">
-			przykladowy tekst
+			Pokój
 		</div>
 		<div class="icon">
 			ikona
+		</div>
+		<div class="annotation">
+			Patryśkolandia.
 		</div>
 	</div>
 	<div class="container">
 		<div class="label">
-			przykladowy tekst
+			Sypialnia
 		</div>
 		<div class="icon">
 			ikona
+		</div>
+		<div class="annotation">
+			Oknodrzwi.
 		</div>
 	</div>
 	<div class="container">
 		<div class="label">
-			przykladowy tekst
+			Sypialnia
 		</div>
 		<div class="icon">
 			ikona
+		</div>
+		<div class="annotation">
+			Drzwi balkonowe.
+		</div>
+	</div>
+	<div class="container">
+		<div class="label">
+			Pokój
+		</div>
+		<div class="icon">
+			ikona
+		</div>
+		<div class="annotation">
+			Drzwi balkonowe.
 		</div>
 	</div>
       </li>
@@ -235,8 +338,8 @@
   </div>
 
 
-  <script type="text/javascript" src="../lib/jquery.min.js"></script>
-  <script type="text/javascript" src="../../dragend.js"></script>
+  <script type="text/javascript" src="jquery.min.js"></script>
+  <script type="text/javascript" src="dragend.js"></script>
 
   <script>
 
