modified:   config/config.json

--- a/www/index.html
+++ b/www/index.html
@@ -134,6 +134,7 @@
   <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Arvo:400,700' rel='stylesheet' type='text/css'>
 
+
 </head>
 <body>
 
@@ -188,7 +189,7 @@
       </li>
       <li class="middle dragend-page">
         <h1>Parter</h1>
-	<div class="container">
+	<div class="container" onClick="$.get('http://192.168.1.201/?action=autoaction&id=0');">
 		<div class="label">
 			Kuchnia 1
 		</div>
@@ -199,7 +200,7 @@
 			Długie okno.
 		</div>
 	</div>
-	<div class="container">
+	<div class="container" onClick="$.get('http://192.168.1.201/?action=autoaction&id=1');">
 		<div class="label">
 			Kuchnia 2
 		</div>
@@ -210,7 +211,7 @@
 			Narożne.
 		</div>
 	</div>
-	<div class="container">
+	<div class="container" onClick="$.get('http://192.168.1.201/?action=autoaction&id=2');">
 		<div class="label">
 			Jadalnia
 		</div>
@@ -221,7 +222,7 @@
 			Wyjście na taras z jadalni.
 		</div>
 	</div>
-	<div class="container">
+	<div class="container" onClick="$.get('http://192.168.1.201/?action=autoaction&id=3');">
 		<div class="label">
 			Salon 1
 		</div>
@@ -232,7 +233,7 @@
 			Witryna w salonie.
 		</div>
 	</div>
-	<div class="container">
+	<div class="container" onClick="$.get('http://192.168.1.201/?action=autoaction&id=4');">
 		<div class="label">
 			Salon 2
 		</div>
@@ -243,7 +244,7 @@
 			Wyjście na ogród.
 		</div>
 	</div>
-	<div class="container">
+	<div class="container" onClick="$.get('http://192.168.1.201/?action=autoaction&id=5');">
 		<div class="label">
 			Gabinet
 		</div>
@@ -254,7 +255,7 @@
 			Jaki prezes taki gabinet.
 		</div>
 	</div>
-	<div class="container">
+	<div class="container" onClick="$.get('http://192.168.1.201/?action=autoaction&id=6');">
 		<div class="label">
 			Schowanko
 		</div>
@@ -265,7 +266,7 @@
 			Zakaz wstępu!
 		</div>
 	</div>
-	<div class="container">
+	<div class="container" onClick="$.get('http://192.168.1.201/?action=autoaction&id=7');">
 		<div class="label">
 			Kotłownia
 		</div>
@@ -349,10 +350,7 @@
           $("#demo").css("visibility", "visible");
         }
       });
-    });
-
-
-
+    })
   </script>
 
 </body>
